adding directly to the notebook div

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <h2>Jupyter javascript plugin for static sites</h2>
 
 <p> A really simple example:</p>
-
+<div id="notebook"></div>
 <pre data-executable id="hello-example">
 z = "hello", 4+4
 print(z)
