--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--  materialize IMPORT Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
     <link rel="stylesheet" href="static/thebe/site.css" type="text/css"/>
 
     <!-- This example uses requirejs to dynamically load scripts -->
@@ -20,8 +25,6 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- or -->
     <!-- // <script src="../static/components/jquery/jquery.min.js" type="text/javascript" charset="utf-8"></script> -->
-
-
     <script>
       define('jquery', [], jQuery);
 
@@ -77,7 +80,6 @@
 </head>
 
 <body>
-
 <noscript>
 <div id='noscript'>
       This page requires JavaScript.<br>
@@ -87,6 +89,51 @@
 
 <h1>Thebe</h1>
 <h2>Jupyter javascript plugin for static sites</h2>
+
+<div class="row cell_border">
+  <div class="row black-text bottom_border right_border header_padding" style="border-right-color:{{ni_color}};">
+      <div class="col s1">
+      <button type="submit">   <i class="Small material-icons">fast_rewind</i></button>
+      </div>
+      <div class="col s1">
+        <button type="submit"> <i class="Small material-icons">fast_forward</i></button>
+      </div>
+      <div class="col s2">
+      <button type="submit">   <i class="Small material-icons">chat_bubble</i></button>
+      </div>
+      <div class="col s1">
+        <button type="submit"> <i class="Small material-icons">done</i></button>
+      </div>
+      <div class="col s1">
+        <button type="submit"> <i class="Small material-icons">pageview</i></button>
+      </div>
+      <div class="col s1">
+      </div>
+      <div class="col s1 delete_cell">
+        <button type="submit"> <i class="Small material-icons">loop</i></button>
+      </div>
+      <div class="col s1">
+      </div>
+      <div class="col s1">
+      </div>
+      <div class="col s1">
+          {{cell_type}}
+      </div>
+      <div class="col s1 ">
+          <button type="submit"><i class="Small material-icons">system_update_alt</i></button>
+      </div>
+  </div>
+  <pre data-executable id="hello-example">
+  z = "hello", 4+4
+  print(z)
+
+  </pre>
+
+
+    </div>
+
+
+
 
 <p> A really simple example:</p>
 <div id="notebook"></div>
